# context_gen_tool

./: .coderabbit.yaml  .gitignore  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.json  requirements.txt  seed_data.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 5c6c874465c9_initial_schema_all_models.py  6634ac9d4144_widen_job_id_job_name_to_text.py  a1b2c3d4e5f6_add_content_versions_drop_checkpoints.py  ae4fe11527fd_add_config_extraction_runs_and_config_.py  b2c3d4e5f6a7_add_composite_index_content_versions.py  b3f8a1c9e2d7_add_api_call_log_to_extraction_runs.py  b60ef06f1fcf_add_context_tree_checkpoints.py  c3d4e5f6a7b8_add_platform_settings.py  c7e2a3f1b4d8_add_context_tree_runs_table.py  d4e5f6a7b8c9_add_platform_variables.py  e5f6a7b8c9d0_add_analysis_source_type.py  f4452eb7a64f_add_updated_at_and_version_to_context_.py
apps/api/app/: config.py  database.py  logging_config.py  main.py  utils.py
apps/api/app/core/: auth.py  cache.py  circuit_breaker.py  rbac.py  task_registry.py  websocket.py
apps/api/app/middleware/: request_id.py
apps/api/app/models/: __init__.py  analysis.py  audit_log.py  chat.py  config_pipeline.py  content_version.py  context.py  context_doc.py  context_tree.py  context_tree_checkpoint.py  extraction.py  platform_settings.py  platform_variable.py  source_run.py  user.py
apps/api/tests/: conftest.py  test_auth.py  test_config_api_client.py  test_context_engine.py  test_health.py
(+208 files in other folders)
