[project]
name = "aira-context-api"
version = "1.0.0"
description = "Backend API for aiRA Context Management Tool"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
